syntax = "proto3";
package leo;

service UserService {
    rpc PostUser (PostUserRequest) returns (PostUserResponse);
    rpc ListUser (ListUserRequest) returns (ListUserResponse);
    rpc FindUser (FindUserRequest) returns (FindUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// User
message User {
    string id        = 1;
    string name      = 2;
    string email     = 3;
    int64  createdAt = 4;

    // TODO 本当は`optional int64`として定義できるがRustのtonicが対応してないためoneofを使用する
    oneof updatedAtOneof {
        int64  updatedAt = 5;
    }
}

// Request Messages
message PostUserRequest {
    string name     = 1;
    string email    = 2;
    string password = 3;
}

message ListUserRequest {}

message FindUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id       = 1;
    string name     = 2;
    string email    = 3;
    string password = 4;
}

message DeleteUserRequest {
    string id = 1;
}

// Response Messages
message PostUserResponse {
    User user = 1;
}

message ListUserResponse {
    repeated User users = 1;
}

message FindUserResponse {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserResponse {}
